@@ -4,7 +4,6 @@ import java.io.DataInputStream
 import java.io.File
 import java.io.InputStream
 import java.lang.foreign.Arena
-import java.lang.foreign.MemoryLayout
 import java.lang.foreign.MemorySegment
 import java.lang.foreign.ValueLayout
 import java.util.concurrent.Callable
@@ -18,36 +17,136 @@ import java.util.logging.Logger
  */
 object Profiler {
     private val logger = Logger.getLogger(Profiler::class.java.name)
-    private val pathCache = java.util.concurrent.ConcurrentHashMap<String, Long>()
 
     /**
-     * Captured syscall trace events.
+     * Profiles [block] on a dedicated OS platform thread under a seccomp
+     * USER_NOTIF filter and returns both the block's return value and the
+     * complete [BillOfBehavior].
+     *
+     * The lambda runs synchronously — the caller blocks until it completes.
+     *
+     * ## Thread isolation
+     * A fresh OS thread is created for each call. Syscalls from any threads
+     * spawned *inside* the lambda are not captured — seccomp USER_NOTIF is
+     * per-thread, and profiling child threads requires explicit opt-in not
+     * yet provided by this API.
+     *
+     * ## Stack traces
+     * Per-syscall JVM stack traces are captured on a best-effort basis.
+     * When the kernel pauses the worker for USER_NOTIF, its Java stack is
+     * frozen. The trace listener captures it via [Thread.stackTrace] before
+     * the daemon sends FLAG_CONTINUE. Frames are Java-only. There is a brief
+     * window between the daemon sending the TraceEvent and the JVM listener
+     * reading it; in practice the worker is still in-kernel during this
+     * window, but this is not a formal JMM guarantee. Treat traces as
+     * diagnostic, not as hard security evidence.
+     *
+     * @throws IllegalStateException if the profiling infrastructure cannot
+     *         be initialised (e.g. PR_SET_NO_NEW_PRIVS failed).
+     * @throws IllegalStateException if called from a Loom virtual thread
+     *         (would poison the ForkJoinPool carrier — see AGENTS.md Rule B).
      */
-    val recentLogs = java.util.concurrent.CopyOnWriteArrayList<TraceEvent>()
+    fun <T> profile(block: () -> T): ProfilingResult<T> {
+        if (Thread.currentThread().isVirtual) {
+            throw IllegalStateException("Seccomp profiling is not supported on Loom virtual threads.")
+        }
 
-    /**
-     * Compiles the currently profiled logs into a live Policy object.
-     */
-    fun compilePolicy(basePolicy: Policy = Policy.PURE_COMPUTE): Policy {
-        return BobCompiler.compile(recentLogs, basePolicy)
+        // Setup socket path
+        val tempDir = File("build/tmp")
+        tempDir.mkdirs()
+        val socketFile = File.createTempFile("jseccomp-profiler-", ".sock", tempDir)
+        socketFile.delete() // delete so bind can create it
+        val socketPath = socketFile.absolutePath
+
+        // Spawn Daemon
+        val javaBin = System.getProperty("java.home") + "/bin/java"
+        val classpath = System.getProperty("java.class.path")
+        val pb = ProcessBuilder(
+            javaBin,
+            "--enable-native-access=ALL-UNNAMED",
+            "-cp", classpath,
+            "io.contained.ProfilerDaemon",
+            socketPath
+        )
+        val daemonProcess = pb.start()
+        val daemonPid = daemonProcess.pid()
+
+        // Set the daemon process as our allowed ptrace tracer under Yama ptrace_scope = 1
+        // PR_SET_PTRACER = 0x59616d61
+        LinuxNative.prctl(0x59616d61, daemonPid, 0, 0, 0)
+
+        // Stream daemon errorStream to System.err
+        val stderrThread = Thread {
+            daemonProcess.errorStream.bufferedReader().useLines { lines ->
+                lines.forEach { line ->
+                    System.err.println("[DAEMON ERR] $line")
+                    System.err.flush()
+                }
+            }
+        }.apply { isDaemon = true; name = "profiler-daemon-stderr" }
+        stderrThread.start()
+
+        // Ensure daemon process is cleaned up on JVM exit
+        val shutdownHook = Thread {
+            daemonProcess.destroyForcibly()
+        }
+        Runtime.getRuntime().addShutdownHook(shutdownHook)
+
+        val localLogs = java.util.concurrent.CopyOnWriteArrayList<TraceEvent>()
+        val localStackProfile = java.util.concurrent.ConcurrentHashMap<TraceEvent, Array<StackTraceElement>>()
+
+        var workerThread: Thread? = null
+
+        try {
+            var blockResult: Any? = null
+            var blockError: Throwable? = null
+
+            // Dedicated OS platform thread for block
+            val thread = Thread {
+                installProfilingFilterForThread(
+                    socketPath,
+                    Policy.PURE_COMPUTE,
+                    localLogs,
+                    localStackProfile
+                ) { workerThread }
+
+                // Apply Landlock profiling ruleset if requested
+                if (System.getenv("JSECCOMP_PROFILER_AUDIT") == "true") {
+                    Landlock.applyProfilingRuleset()
+                }
+
+                try {
+                    blockResult = block()
+                } catch (t: Throwable) {
+                    blockError = t
+                }
+            }
+
+            workerThread = thread
+            thread.start()
+            thread.join()
+
+            val err = blockError
+            if (err != null) throw err
+
+            val behavior = BobCompiler.compile(localLogs).copy(
+                stackProfile = localStackProfile.toMap()
+            )
+
+            @Suppress("UNCHECKED_CAST")
+            return ProfilingResult(blockResult as T, behavior)
+        } finally {
+            try {
+                Runtime.getRuntime().removeShutdownHook(shutdownHook)
+            } catch (e: Exception) {}
+            daemonProcess.destroyForcibly()
+            try {
+                socketFile.delete()
+            } catch (e: Exception) {}
+        }
     }
 
-    /**
-     * Compiles the currently profiled logs into a beautiful copy-pasteable Kotlin DSL string.
-     */
-    fun compileToDsl(basePolicyName: String = "Policy.PURE_COMPUTE"): String {
-        return BobCompiler.compileToDsl(recentLogs, basePolicyName)
-    }
-
-    /**
-     * Clears all accumulated profiling logs and path caches.
-     */
-    fun clear() {
-        recentLogs.clear()
-        pathCache.clear()
-    }
-
-    fun wrap(delegate: ExecutorService, vararg policies: Policy): ExecutorService {
+    fun wrap(delegate: ExecutorService, vararg policies: Policy): ProfilerExecutorWrapper {
         val policy = Policy.combine(*policies)
 
         // Setup socket path
@@ -152,7 +251,209 @@ object Profiler {
         }
     }
 
-    internal class ProfilerExecutorWrapper(
+    private fun installProfilingFilterForThread(
+        socketPath: String,
+        policy: Policy,
+        accumulatedLogs: MutableList<TraceEvent>,
+        stackTracesMap: MutableMap<TraceEvent, Array<StackTraceElement>>?,
+        workerThreadProvider: () -> Thread?
+    ) {
+        val installLatch = java.util.concurrent.CountDownLatch(1)
+        val proceedLatch = java.util.concurrent.CountDownLatch(1)
+        val listenerFd = java.util.concurrent.atomic.AtomicInteger(-1)
+        val installError = java.util.concurrent.atomic.AtomicReference<Throwable?>(null)
+
+        val coordinatorThread = Thread {
+            try {
+                installLatch.await()
+                val fd = listenerFd.get()
+                if (fd < 0) {
+                    val err = installError.get() ?: IllegalStateException("Failed to install seccomp filter")
+                    throw err
+                }
+
+                val socketFd = connectWithRetry(socketPath)
+                try {
+                    val sent = sendDescriptor(socketFd, fd)
+                    if (!sent) {
+                        throw IllegalStateException("Failed to send seccomp listener FD to daemon")
+                    }
+
+                    // Wait for ACK byte from daemon
+                    Arena.ofConfined().use { arena ->
+                        val ackBuf = arena.allocate(1)
+                        val res = LinuxNative.read(socketFd, ackBuf, 1)
+                        if (res.returnValue != 1L || ackBuf.get(ValueLayout.JAVA_BYTE, 0) != 0xAC.toByte()) {
+                            throw IllegalStateException("Daemon failed to ACK listener receipt")
+                        }
+                    }
+
+                    // Start listener thread for this socket to receive TraceEvents
+                    startTraceListener(socketFd, accumulatedLogs, stackTracesMap, workerThreadProvider)
+                } catch (e: Exception) {
+                    LinuxNative.close(socketFd)
+                    throw e
+                } finally {
+                    LinuxNative.close(fd)
+                }
+            } catch (t: Throwable) {
+                installError.set(t)
+            } finally {
+                proceedLatch.countDown()
+            }
+        }.apply { isDaemon = true; name = "profiler-coordinator" }
+
+        coordinatorThread.start()
+
+        try {
+            val r1 = LinuxNative.prctl(LinuxNative.PR_SET_NO_NEW_PRIVS, 1, 0, 0, 0)
+            if (r1.returnValue != 0L) {
+                throw IllegalStateException("prctl(PR_SET_NO_NEW_PRIVS) failed with errno ${r1.errno}")
+            }
+
+            val arch = Arch.current()
+            // We no longer need to unblock bootstrap network system calls because socket connections
+            // and descriptor passing are completely offloaded to the un-sandboxed coordinator thread!
+            val filters = BpfFilter.build(arch, policy, profilingMode = true)
+
+            Arena.ofConfined().use { arena ->
+                val prog = LinuxNative.newSockFProg(arena, filters)
+
+                val r = LinuxNative.syscall(
+                    arch.seccompSyscallNumber.toLong(),
+                    LinuxNative.SECCOMP_SET_MODE_FILTER.toLong(),
+                    LinuxNative.SECCOMP_FILTER_FLAG_NEW_LISTENER.toLong(),
+                    prog
+                )
+
+                if (r.returnValue < 0) {
+                    throw IllegalStateException("Failed to install seccomp profiling listener: errno=${r.errno}")
+                }
+
+                listenerFd.set(r.returnValue.toInt())
+            }
+        } catch (t: Throwable) {
+            installError.set(t)
+        } finally {
+            installLatch.countDown()
+        }
+
+        proceedLatch.await()
+        val err = installError.get()
+        if (err != null) {
+            throw err
+        }
+    }
+
+    private fun startTraceListener(
+        socketFd: Int,
+        accumulatedLogs: MutableList<TraceEvent>,
+        stackTracesMap: MutableMap<TraceEvent, Array<StackTraceElement>>?,
+        workerThreadProvider: () -> Thread?
+    ) {
+        val pathCache = java.util.concurrent.ConcurrentHashMap<String, Long>()
+
+        val inputStream = object : InputStream() {
+            override fun read(): Int {
+                Arena.ofConfined().use { arena ->
+                    val b = arena.allocate(1)
+                    val res = LinuxNative.read(socketFd, b, 1)
+                    if (res.returnValue <= 0) return -1
+                    return b.get(ValueLayout.JAVA_BYTE, 0L).toInt() and 0xFF
+                }
+            }
+
+            override fun read(b: ByteArray, off: Int, len: Int): Int {
+                if (len == 0) return 0
+                Arena.ofConfined().use { arena ->
+                    val buf = arena.allocate(len.toLong())
+                    val res = LinuxNative.read(socketFd, buf, len.toLong())
+                    if (res.returnValue <= 0) return -1
+                    val readLen = res.returnValue.toInt()
+                    for (i in 0 until readLen) {
+                        b[off + i] = buf.get(ValueLayout.JAVA_BYTE, i.toLong())
+                    }
+                    return readLen
+                }
+            }
+
+            override fun close() {
+                LinuxNative.close(socketFd)
+            }
+        }
+
+        Thread {
+            try {
+                val dis = DataInputStream(inputStream)
+                while (true) {
+                    val pid = dis.readInt()
+                    val syscallNameLen = dis.readInt()
+                    val syscallNameBytes = ByteArray(syscallNameLen)
+                    dis.readFully(syscallNameBytes)
+                    val syscallName = String(syscallNameBytes, Charsets.UTF_8)
+
+                    val argsCount = dis.readInt()
+                    val args = LongArray(argsCount)
+                    for (i in 0 until argsCount) {
+                        args[i] = dis.readLong()
+                    }
+
+                    val pathsCount = dis.readInt()
+                    val paths = mutableListOf<String>()
+                    for (i in 0 until pathsCount) {
+                        val pathLen = dis.readInt()
+                        val pathBytes = ByteArray(pathLen)
+                        dis.readFully(pathBytes)
+                        paths.add(String(pathBytes, Charsets.UTF_8))
+                    }
+
+                    val event = TraceEvent(pid, syscallName, args, paths)
+
+                    // Deduplicate synchronous events that trigger both Seccomp and Landlock Audit
+                    if (paths.isNotEmpty()) {
+                        val cacheKey = "$syscallName:${paths.sorted().joinToString(",")}"
+                        val now = System.currentTimeMillis()
+                        val lastSeen = pathCache.get(cacheKey) ?: 0L
+                        if (now - lastSeen < 500) {
+                            println("[PROFILER] Deduplicated duplicate event for $cacheKey")
+                            // Write ACK to daemon so the daemon doesn't hang!
+                            Arena.ofConfined().use { arena ->
+                                val ack = arena.allocate(1)
+                                ack.set(ValueLayout.JAVA_BYTE, 0L, 0x41.toByte()) // ACK byte
+                                LinuxNative.write(socketFd, ack, 1)
+                            }
+                            continue // Skip duplicate within 500ms window
+                        }
+                        pathCache[cacheKey] = now
+                    }
+
+                    // Capture stack trace while the worker thread is blocked in-kernel
+                    if (stackTracesMap != null) {
+                        val workerThread = workerThreadProvider()
+                        if (workerThread != null) {
+                            val frames = workerThread.stackTrace
+                            stackTracesMap[event] = frames
+                        }
+                    }
+
+                    accumulatedLogs.add(event)
+
+                    // Send ACK back to the daemon so it can release the worker thread!
+                    Arena.ofConfined().use { arena ->
+                        val ack = arena.allocate(1)
+                        ack.set(ValueLayout.JAVA_BYTE, 0L, 0x41.toByte()) // ACK byte
+                        LinuxNative.write(socketFd, ack, 1)
+                    }
+                }
+            } catch (e: Exception) {
+                // socket closed or error
+            } finally {
+                inputStream.close()
+            }
+        }.apply { isDaemon = true; name = "trace-listener-$socketFd" }.start()
+    }
+
+    class ProfilerExecutorWrapper(
         private val delegate: ExecutorService,
         private val policy: Policy,
         private val socketPath: String,
@@ -160,6 +461,7 @@ object Profiler {
     ) : ExecutorService by delegate {
 
         private val threadApplied = ThreadLocal.withInitial { false }
+        val recentLogs = java.util.concurrent.CopyOnWriteArrayList<TraceEvent>()
 
         override fun execute(command: Runnable) {
             delegate.execute {
@@ -191,7 +493,12 @@ object Profiler {
                 throw IllegalStateException("Seccomp profiling is not supported on Loom virtual threads.")
             }
             if (!threadApplied.get()) {
-                installProfilingFilter()
+                installProfilingFilterForThread(
+                    socketPath,
+                    policy,
+                    recentLogs,
+                    null
+                ) { Thread.currentThread() }
 
                 // Landlock Audit is non-transparent (denies and logs).
                 // Only enable if explicitly requested for io_uring profiling.
@@ -203,159 +510,19 @@ object Profiler {
             }
         }
 
-        private fun installProfilingFilter() {
-            val r1 = LinuxNative.prctl(LinuxNative.PR_SET_NO_NEW_PRIVS, 1, 0, 0, 0)
-            if (r1.returnValue != 0L) {
-                throw IllegalStateException("prctl(PR_SET_NO_NEW_PRIVS) failed with errno ${r1.errno}")
-            }
-
-            val arch = Arch.current()
-            // Unblock bootstrap syscalls to prevent chicken-and-egg deadlocks during socket connection exfiltration
-            val profilingPolicy = Policy.builder()
-                .base(policy)
-                .unblock(Syscall.SOCKET, Syscall.CONNECT, Syscall.SENDMSG, Syscall.SENDTO)
-                .build()
-            val filters = BpfFilter.build(arch, profilingPolicy, profilingMode = true)
-
-            Arena.ofConfined().use { arena ->
-                val prog = LinuxNative.newSockFProg(arena, filters)
-
-                val r = LinuxNative.syscall(
-                    arch.seccompSyscallNumber.toLong(),
-                    LinuxNative.SECCOMP_SET_MODE_FILTER.toLong(),
-                    LinuxNative.SECCOMP_FILTER_FLAG_NEW_LISTENER.toLong(),
-                    prog
-                )
-
-                if (r.returnValue < 0) {
-                    throw IllegalStateException("Failed to install seccomp profiling listener: errno=${r.errno}")
-                }
-
-                val listenerFd = r.returnValue.toInt()
-
-                val socketFd = connectWithRetry(socketPath)
-                try {
-                    val sent = sendDescriptor(socketFd, listenerFd)
-                    if (!sent) {
-                        throw IllegalStateException("Failed to send seccomp listener FD to daemon")
-                    }
-
-                    // Wait for ACK byte from daemon
-                    Arena.ofConfined().use { arena ->
-                        val ackBuf = arena.allocate(1)
-                        val res = LinuxNative.read(socketFd, ackBuf, 1)
-                        if (res.returnValue != 1L || ackBuf.get(ValueLayout.JAVA_BYTE, 0) != 0xAC.toByte()) {
-                            throw IllegalStateException("Daemon failed to ACK listener receipt")
-                        }
-                    }
-
-                    // Start listener thread for this socket to receive TraceEvents
-                    startTraceListener(socketFd)
-                } catch (e: Exception) {
-                    LinuxNative.close(socketFd)
-                    throw e
-                } finally {
-                    LinuxNative.close(listenerFd)
-                }
-            }
-        }
-
-        private fun startTraceListener(socketFd: Int) {
-            val inputStream = object : InputStream() {
-                override fun read(): Int {
-                    Arena.ofConfined().use { arena ->
-                        val b = arena.allocate(1)
-                        val res = LinuxNative.read(socketFd, b, 1)
-                        if (res.returnValue <= 0) return -1
-                        return b.get(ValueLayout.JAVA_BYTE, 0L).toInt() and 0xFF
-                    }
-                }
-
-                override fun read(b: ByteArray, off: Int, len: Int): Int {
-                    if (len == 0) return 0
-                    Arena.ofConfined().use { arena ->
-                        val buf = arena.allocate(len.toLong())
-                        val res = LinuxNative.read(socketFd, buf, len.toLong())
-                        if (res.returnValue <= 0) return -1
-                        val readLen = res.returnValue.toInt()
-                        for (i in 0 until readLen) {
-                            b[off + i] = buf.get(ValueLayout.JAVA_BYTE, i.toLong())
-                        }
-                        return readLen
-                    }
-                }
-
-                override fun close() {
-                    LinuxNative.close(socketFd)
-                }
-            }
-
-            Thread {
-                try {
-                    val dis = DataInputStream(inputStream)
-                    while (true) {
-                        val pid = dis.readInt()
-                        val syscallNameLen = dis.readInt()
-                        val syscallNameBytes = ByteArray(syscallNameLen)
-                        dis.readFully(syscallNameBytes)
-                        val syscallName = String(syscallNameBytes, Charsets.UTF_8)
-
-                        val argsCount = dis.readInt()
-                        val args = LongArray(argsCount)
-                        for (i in 0 until argsCount) {
-                            args[i] = dis.readLong()
-                        }
-
-                        val pathsCount = dis.readInt()
-                        val paths = mutableListOf<String>()
-                        for (i in 0 until pathsCount) {
-                            val pathLen = dis.readInt()
-                            val pathBytes = ByteArray(pathLen)
-                            dis.readFully(pathBytes)
-                            paths.add(String(pathBytes, Charsets.UTF_8))
-                        }
-
-                        val event = TraceEvent(pid, syscallName, args, paths)
-
-                        // Deduplicate synchronous events that trigger both Seccomp and Landlock Audit
-                        if (paths.isNotEmpty()) {
-                            val cacheKey = "$syscallName:${paths.sorted().joinToString(",")}"
-                            val now = System.currentTimeMillis()
-                            val lastSeen = pathCache.get(cacheKey) ?: 0L
-                            if (now - lastSeen < 500) {
-                                println("[PROFILER] Deduplicated duplicate event for $cacheKey")
-                                continue // Skip duplicate within 500ms window
-                            }
-                            pathCache[cacheKey] = now
-                        }
-
-                        recentLogs.add(event)
-                    }
-                } catch (e: Exception) {
-                    // socket closed or error
-                } finally {
-                    inputStream.close()
-                }
-            }.apply { isDaemon = true; name = "trace-listener-$socketFd" }.start()
-        }
-
         override fun shutdown() {
             try {
                 // Graceful cleanup
             } finally {
                 delegate.shutdown()
                 daemonProcess.destroy()
-                pathCache.clear()
             }
         }
 
         override fun shutdownNow(): List<Runnable> {
             val tasks = delegate.shutdownNow()
             daemonProcess.destroyForcibly()
-            pathCache.clear()
             return tasks
         }
     }
-
-    private fun Long.asMemorySegment(): MemorySegment = MemorySegment.ofAddress(this)
 }
